Fixes: overflow, menu zindex, responsive elements.

--- a/styles/UI-elements.css
+++ b/styles/UI-elements.css
@@ -80,6 +80,18 @@ button:hover {
   cursor: pointer;
 }
 
+img {
+  width: auto;
+  max-width: 100%;
+}
+
+@media (max-width: 320px) {
+  button {
+    width: 95%;
+    max-width: 100%;
+    min-width: initial;
+  }
+}
 
 @media (max-width: 603px){
   * {
@@ -102,11 +114,5 @@ button:hover {
     width: auto;
     min-height: 48px;
     font-size: 16px;
-  }
-}
-
-@media (max-width: 320px) {
-  button {
-    width: 100%;
   }
 }
